tests/invalid/type/switch_no_termination.pts
function classify(int x) : int {
    switch (x) {
        case 0:
            return 0;
        case 1:
            x = x + 1;
        default:
            return -1;
    }
}
